# trailmarker

./: LICENSE  README.md  THIRD_PARTY_ATTRIBUTIONS.md  compose.yaml  init.sh  pyproject.toml
.github/workflows/: test.yml
backend/: DockerfileDatabase  DockerfileProduction  DockerfileServer  db_setup.sh  populate.py  pyproject.toml  server.py
backend/api/: auth_helpers.py  character_helpers.py  dependencies.py  exceptions.py  helpers.py  import_helpers.py  main.py  test_requests.http
backend/api/routes/: auth.py  characters.py  encounters.py  enemies.py  simulation.py  user.py
backend/data/: spells.json  weapons.json
backend/data/characters/: cleric.json  fighter.json  rogue.json  wizard.json
backend/data/scripts/: initialize_data.py
backend/db/: __init__.py
backend/models/: __init__.py
backend/populate/: populate_characters.py  populate_enemies.py
backend/populate/data/: cleric.json  fighter.json  rogue.json  wizard.json
backend/schemas/: __init__.py
backend/scripts/: check.sh  fix.sh  run_all_checks.sh
backend/simulation/core/: simulation.py
backend/simulation/creatures/: creature.py  enemy.py  player.py
backend/simulation/encounters/: encounter.py
backend/simulation/mechanics/: actions.py  dice.py  heal.py  map.py  misc.py
backend/tests/: sample_data.py  test_creatures.py  test_encounters.py  test_map.py  test_simulation.py
data/scripts/: initialize_data.py
frontend/: DockerfileUI  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json
frontend/assets/: dummyData.js  dummyData.jsx
frontend/src/: index.jsx
frontend/src/css/: styles.css
frontend/src/js/: App.jsx  api.js
frontend/src/js/components/: Login.jsx  (+4 more)
scripts/: run_all_checks.sh
(+92 files in other folders)
