[project]
name = "trailmarker"
version = "0.1.0"
description = ""
authors = [
    {name = "Robin Phillips",email = "robinphillips462@gmail.com"}
]
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pygithub (>=2.8.1,<3.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "fastapi (>=0.120.0,<0.121.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.3,<3.0.0)"
]


[tool.isort]
profile = "black"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
